Tighten up the build process

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"dev": "npx tailwindcss -i ./src/input.css -o ./src/build.css --watch",
+		"dev": "npx tailwindcss -i ./src/input.css -o ./assets/css/build.css --watch",
 		"build": "npx tailwindcss -i ./src/input.css -o ./assets/css/build.css --minify"
 	},
 	"keywords": [],
