--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
 	"main": "index.js",
 	"scripts": {
 		"dev": "npx tailwindcss -i ./src/input.css -o ./assets/css/build.css --watch",
-		"build": "npx tailwindcss -i ./src/input.css -o ./assets/css/build.css --minify",
-		"test": "npx tailwindcss -i ./src/input.css -o ./assets/css/test.css"
+		"build": "npx postcss ./src/input.css -o ./assets/css/build.css"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"autoprefixer": "^10.4.7",
+		"cssnano": "^7.0.4",
+		"postcss": "^8.4.16",
+		"postcss-cli": "^9.1.0",
 		"tailwindcss": "^3.4.4"
 	}
 }
