--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"autoprefixer": "^10.4.7",
 		"cssnano": "^7.0.4",
 		"postcss": "^8.4.16",
+		"prettier-plugin-tailwindcss": "^0.x.x",
 		"postcss-cli": "^9.1.0",
 		"tailwindcss": "^3.4.4"
 	}
